--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -18,8 +18,8 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>440</width>
-    <height>440</height>
+    <width>650</width>
+    <height>450</height>
    </size>
   </property>
   <property name="acceptDrops">
@@ -66,7 +66,7 @@
           </sizepolicy>
          </property>
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="pageNoFile">
           <layout class="QVBoxLayout" name="verticalLayout">
@@ -84,9 +84,9 @@
             </spacer>
            </item>
            <item>
-            <widget class="QLabel" name="lblNoFile">
+            <widget class="QLabel" name="labelOpenFileHint">
              <property name="text">
-              <string>Open or drag an image here:</string>
+              <string>&lt;big&gt;Open or drag an image here:&lt;/big&gt;</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignCenter</set>
@@ -155,22 +155,9 @@
               <item>
                <layout class="QVBoxLayout" name="verticalLayout_2">
                 <item>
-                 <spacer name="verticalSpacer_4">
-                  <property name="orientation">
-                   <enum>Qt::Vertical</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>20</width>
-                    <height>40</height>
-                   </size>
-                  </property>
-                 </spacer>
-                </item>
-                <item>
-                 <widget class="QLabel" name="lblNoFile2">
+                 <widget class="QLabel" name="labelMruHint">
                   <property name="text">
-                   <string>Or select a recently opened image:</string>
+                   <string>&lt;big&gt;... or select a recent image:&lt;/big&gt;</string>
                   </property>
                   <property name="alignment">
                    <set>Qt::AlignCenter</set>
@@ -182,19 +169,6 @@
                    <cstring>listMru</cstring>
                   </property>
                  </widget>
-                </item>
-                <item>
-                 <spacer name="verticalSpacer_3">
-                  <property name="orientation">
-                   <enum>Qt::Vertical</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>20</width>
-                    <height>40</height>
-                   </size>
-                  </property>
-                 </spacer>
                 </item>
                </layout>
               </item>
@@ -231,6 +205,9 @@
          </widget>
          <widget class="QWidget" name="pageWorkAreaSplit">
           <layout class="QVBoxLayout" name="verticalLayout_5">
+           <property name="spacing">
+            <number>2</number>
+           </property>
            <property name="leftMargin">
             <number>0</number>
            </property>
@@ -267,7 +244,7 @@
               <property name="geometry">
                <rect>
                 <x>105</x>
-                <y>32</y>
+                <y>34</y>
                 <width>270</width>
                 <height>162</height>
                </rect>
@@ -312,7 +289,7 @@
               <property name="geometry">
                <rect>
                 <x>105</x>
-                <y>32</y>
+                <y>34</y>
                 <width>271</width>
                 <height>162</height>
                </rect>
