main: Reduce spacing between composite preview widgets

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -243,8 +243,8 @@
              <widget class="QWidget" name="scrollAreaWidgetContents_2">
               <property name="geometry">
                <rect>
-                <x>0</x>
-                <y>0</y>
+                <x>103</x>
+                <y>34</y>
                 <width>270</width>
                 <height>162</height>
                </rect>
@@ -288,8 +288,8 @@
              <widget class="QWidget" name="scrollAreaWidgetContents_3">
               <property name="geometry">
                <rect>
-                <x>0</x>
-                <y>0</y>
+                <x>103</x>
+                <y>34</y>
                 <width>271</width>
                 <height>162</height>
                </rect>
@@ -322,6 +322,9 @@
            </property>
            <property name="bottomMargin">
             <number>0</number>
+           </property>
+           <property name="verticalSpacing">
+            <number>2</number>
            </property>
            <item row="1" column="0">
             <widget class="QSlider" name="viewSlider">
@@ -369,7 +372,7 @@
               <property name="geometry">
                <rect>
                 <x>0</x>
-                <y>0</y>
+                <y>130</y>
                 <width>495</width>
                 <height>181</height>
                </rect>
