--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -244,7 +244,7 @@
               <property name="geometry">
                <rect>
                 <x>103</x>
-                <y>34</y>
+                <y>33</y>
                 <width>270</width>
                 <height>162</height>
                </rect>
@@ -289,7 +289,7 @@
               <property name="geometry">
                <rect>
                 <x>103</x>
-                <y>34</y>
+                <y>32</y>
                 <width>271</width>
                 <height>162</height>
                </rect>
@@ -338,7 +338,7 @@
               <number>100</number>
              </property>
              <property name="value">
-              <number>500</number>
+              <number>1000</number>
              </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
@@ -372,7 +372,7 @@
               <property name="geometry">
                <rect>
                 <x>0</x>
-                <y>130</y>
+                <y>132</y>
                 <width>495</width>
                 <height>181</height>
                </rect>
@@ -396,6 +396,9 @@
        </item>
        <item>
         <layout class="QHBoxLayout" name="workAreaViewModeLayout">
+         <property name="spacing">
+          <number>0</number>
+         </property>
          <item>
           <widget class="QSlider" name="zoomSlider">
            <property name="maximumSize">
@@ -445,6 +448,77 @@
            <property name="buddy">
             <cstring>cbxViewMode</cstring>
            </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QFrame" name="compositeShortcutsPanel">
+           <layout class="QHBoxLayout" name="compositeShortcutsPanelLayout">
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <property name="leftMargin">
+             <number>6</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>6</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <widget class="QPushButton" name="compositeOriginalOnlyToggle">
+              <property name="maximumSize">
+               <size>
+                <width>32</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="toolTip">
+               <string>Shows the original image only</string>
+              </property>
+              <property name="text">
+               <string>O</string>
+              </property>
+              <property name="icon">
+               <iconset theme="media-skip-backward"/>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
+              <property name="checked">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="compositeRcOnlyToggle">
+              <property name="maximumSize">
+               <size>
+                <width>32</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="toolTip">
+               <string>Shows the recolored image only</string>
+              </property>
+              <property name="text">
+               <string>R</string>
+              </property>
+              <property name="icon">
+               <iconset theme="media-skip-forward"/>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
+              <property name="checked">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </widget>
          </item>
          <item>
@@ -1099,6 +1173,8 @@
   <tabstop>listRanges</tabstop>
   <tabstop>cbxNewPal</tabstop>
   <tabstop>zoomSlider</tabstop>
+  <tabstop>compositeOriginalOnlyToggle</tabstop>
+  <tabstop>compositeRcOnlyToggle</tabstop>
   <tabstop>cbxViewMode</tabstop>
  </tabstops>
  <resources/>
