--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -397,7 +397,7 @@
        <item>
         <layout class="QHBoxLayout" name="workAreaViewModeLayout">
          <property name="spacing">
-          <number>0</number>
+          <number>6</number>
          </property>
          <item>
           <widget class="QSlider" name="zoomSlider">
@@ -457,13 +457,13 @@
              <number>0</number>
             </property>
             <property name="leftMargin">
-             <number>6</number>
+             <number>0</number>
             </property>
             <property name="topMargin">
              <number>0</number>
             </property>
             <property name="rightMargin">
-             <number>6</number>
+             <number>0</number>
             </property>
             <property name="bottomMargin">
              <number>0</number>
@@ -654,7 +654,7 @@
          </layout>
         </widget>
        </item>
-       <item row="2" column="0">
+       <item row="3" column="0">
         <widget class="QDialogButtonBox" name="buttonBox">
          <property name="standardButtons">
           <set>QDialogButtonBox::Close|QDialogButtonBox::Save</set>
@@ -768,6 +768,22 @@
           </item>
          </layout>
         </widget>
+       </item>
+       <item row="2" column="0">
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Maximum</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>6</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </widget>
