main: Give Settings action an icon

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -1467,6 +1467,9 @@
    </property>
   </action>
   <action name="actionAppSettings">
+   <property name="icon">
+    <iconset theme="configure"/>
+   </property>
    <property name="text">
     <string>&amp;Settings...</string>
    </property>
